# kripta-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
kripta_py/: __init__.py  asymmetric.py  symmetric.py
tests/: test_kripta_py.py
