[tool.poetry]
name = "kripta-py"
version = "0.1.1"
description = "A tiny asymmetric/symmetric encryption lib for humans."
authors = ["sanix-darker <s4nixd@gmail.com>"]
keywords = ["AES", "RSA", "encryption", "decryption"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = ">=3.14.1,<4"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
flake8 = "^4.0.1"
mypy = "^0.950"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
